<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/share_review"
        android:icon="@drawable/ic_baseline_share_24"
        android:orderInCategory="0"
        android:title="@string/Share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rename_review"
        android:icon="@drawable/ic_baseline_border_color_24"
        android:title="@string/rename"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_review"
        android:icon="@drawable/ic_baseline_crop_24"
        android:title="@string/Edit"
        android:orderInCategory="150"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ok_review"
        android:icon="@drawable/ic_baseline_done_24"
        android:orderInCategory="100"
        android:title="@string/ok"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_baseline_delete_24"
        android:id="@+id/delete_review"
        android:orderInCategory="500"
        android:title="@string/Delete"
        app:showAsAction="ifRoom"/>
</menu>